@@ -44,6 +44,7 @@ Version 1.5.0+svn:
    * dissallow_observers is on as default if side has controller=null
    * Fixed null-pointer reference in network code
    * Added possibility to use per fight EV statistics proposed by maboul
+   * Added smoother FPS limit to server
    * Fixed a mememory leak in networking code
    * Removed bug introduced in 1.5.0 that allowed use of :debug commands during
      network play
